# docusaurus.io-AI-neew

./: .gitignore  pyproject.toml
.specify/memory/: constitution.md
backend/: README.md  agent.py  app.py  main.py  pyproject.toml
history/prompts/1-chatbot-panel-fixing/: 1-fix-chatbot-panel-plan.plan.prompt.md  1-fix-chatbot-panel-spec.spec.prompt.md  1-fix-chatbot-panel-tasks.tasks.prompt.md
history/prompts/1-gemini-rag-agent/: 2-plan-gemini-rag-agent.plan.prompt.md  3-tasks-gemini-rag-agent.tasks.prompt.md  4-implement-gemini-rag-agent.red.prompt.md
history/prompts/constitution/: 1-update-physical-ai-constitution.constitution.prompt.md
history/prompts/frontend-backend-integration/: 1-frontend-backend-integration.spec.prompt.md  2-frontend-backend-integration.plan.prompt.md  3-frontend-backend-integration.tasks.prompt.md  4-frontend-backend-integration.implement.prompt.md
history/prompts/rag-retrieval-validation/: 1-rag-retrieval-validation.spec.prompt.md  2-rag-retrieval-validation.plan.prompt.md  3-rag-retrieval-validation.tasks.prompt.md  4-rag-retrieval-validation.implement.prompt.md
humanoid-book/: docusaurus.config.ts  package-lock.json  package.json
humanoid-book/docs/Module-1/: Lesson-1-Your-First-Robot.md  Lesson-2-Move-Robot-Keyboard.md  Lesson-3-Talk-to-Robot-Parts.md  Lesson-4-Build-Humanoid-Body.md  index.md
humanoid-book/src/components/: ChatWidget.js
humanoid-book/src/theme/: Root.js
